refactor: improve naming

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -44,8 +44,8 @@ const {
       <div class="header-inner">
         <a href="/" class="logo">Bilbo</a>
         <nav>
-          <a href="/">Recherche</a>
-          <a href="/chat">Chat</a>
+          <a href="/">Recherche par mots-clés</a>
+          <a href="/discussion">Recherche par discussion IA</a>
         </nav>
       </div>
     </header>
